Adding missing tag in Readme

--- a/.github/workflows/youtube-cards.yml
+++ b/.github/workflows/youtube-cards.yml
@@ -17,3 +17,4 @@ jobs:
         with:
           channel_id: UCqN30hP5vl4F3lUFYXQNkNQ
           comment_tag_name: YOUTUBE-CARDS
+          show_duration: true
